horizon/deployment.yaml
---
# Source: horizon/templates/deployment.yaml


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: horizon
  annotations:
    "openstackhelm.openstack.org/release_uuid": ""
  labels:
    release_group: release-name
    application: horizon
    component: server
spec:
  replicas: 1
  selector:
    matchLabels:
      release_group: release-name
      application: horizon
      component: server
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  template:
    metadata:
      labels:
        release_group: release-name
        application: horizon
        component: server
      annotations:
        "openstackhelm.openstack.org/release_uuid": ""
        configmap-bin-hash: "1e2bd5bbc95e7f923220a93b3dd4177798a76829788b3154b7beb67f3acaf4bf"
        configmap-etc-hash: "f91c20e31a22db61c0cefbe679bb31ebba50f4bb9a4a1349b184746db5530606"
        
    spec:
      serviceAccountName: horizon
      securityContext:
        runAsUser: 42424
        
      affinity:
        
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: release_group
                    operator: In
                    values:
                    - release-name
                  - key: application
                    operator: In
                    values:
                    - horizon
                  - key: component
                    operator: In
                    values:
                    - server
                  
              topologyKey: kubernetes.io/hostname
            weight: 10
      nodeSelector:
        openstack-control-plane: enabled
      terminationGracePeriodSeconds: 30
      containers:
        - name: horizon
          image: "docker.io/openstackhelm/horizon:stein-ubuntu_bionic"
          imagePullPolicy: IfNotPresent
          
          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsUser: 0
            
          command:
            - /tmp/horizon.sh
            - start
          lifecycle:
            preStop:
              exec:
                command:
                  - /tmp/horizon.sh
                  - stop
          ports:
            - name: web
              containerPort: 80
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 80
            initialDelaySeconds: 180
            periodSeconds: 60
            timeoutSeconds: 5
          volumeMounts:
            - name: pod-tmp
              mountPath: /tmp
            - name: static-horizon
              mountPath: /var/www/html/
            - name: horizon-bin
              mountPath: /tmp/horizon.sh
              subPath: horizon.sh
              readOnly: true
            - name: horizon-bin
              mountPath: /tmp/manage.py
              subPath: manage.py
              readOnly: true
            - name: horizon-etc
              mountPath: /etc/apache2/sites-available/000-default.conf
              subPath: horizon.conf
              readOnly: true
            - name: horizon-etc
              mountPath: /etc/apache2/conf-available/security.conf
              subPath: security.conf
              readOnly: true
            - name: horizon-bin
              mountPath: /var/www/cgi-bin/horizon/django.wsgi
              subPath: django.wsgi
              readOnly: true
            - name: horizon-etc
              mountPath: /etc/openstack-dashboard/local_settings
              subPath: local_settings
              readOnly: true
            - name: horizon-etc
              mountPath: /etc/openstack-dashboard/ceilometer_policy.json
              subPath: ceilometer_policy.json
              readOnly: true
            - name: horizon-etc
              mountPath: /etc/openstack-dashboard/cinder_policy.json
              subPath: cinder_policy.json
              readOnly: true
            - name: horizon-etc
              mountPath: /etc/openstack-dashboard/glance_policy.json
              subPath: glance_policy.json
              readOnly: true
            - name: horizon-etc
              mountPath: /etc/openstack-dashboard/heat_policy.json
              subPath: heat_policy.json
              readOnly: true
            - name: horizon-etc
              mountPath: /etc/openstack-dashboard/keystone_policy.json
              subPath: keystone_policy.json
              readOnly: true
            - name: horizon-etc
              mountPath: /etc/openstack-dashboard/neutron_policy.json
              subPath: neutron_policy.json
              readOnly: true
            - name: horizon-etc
              mountPath: /etc/openstack-dashboard/nova_policy.json
              subPath: nova_policy.json
              readOnly: true

      volumes:
        - name: pod-tmp
          emptyDir: {}
        - name: wsgi-horizon
          emptyDir: {}
        - name: static-horizon
          emptyDir: {}
        - name: horizon-bin
          configMap:
            name: horizon-bin
            defaultMode: 0555
        - name: horizon-etc
          secret:
            secretName: horizon-etc
            defaultMode: 0444
