horizon/service-ingress.yaml
---
# Source: horizon/templates/service-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: horizon
spec:
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
  selector:
    app: ingress-api
